gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "34"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"sangsang-plus-gateway"},"name":"sangsang-plus-gateway","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"sangsang-plus-gateway"}},"template":{"metadata":{"labels":{"app":"sangsang-plus-gateway"}},"spec":{"containers":[{"env":[{"name":"KAFKA_BOOTSTRAP_SERVERS","value":"kafka:9092"},{"name":"USER_SERVICE_URL","value":"http://user-service.user-service.svc.cluster.local"},{"nam [...]
  creationTimestamp: "2025-07-21T06:41:04Z"
  generation: 92
  labels:
    app: sangsang-plus-gateway
  name: sangsang-plus-gateway
  namespace: default
  resourceVersion: "1775314"
  uid: 699c8914-f556-4df5-8dda-7088804e20d1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sangsang-plus-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-07-31T01:10:49Z"
      creationTimestamp: null
      labels:
        app: sangsang-plus-gateway
    spec:
      containers:
      - env:
        - name: KAFKA_BOOTSTRAP_SERVERS
          value: kafka:9092
        - name: USER_SERVICE_URL
          value: http://user-service.user-service.svc.cluster.local
        - name: PRODUCT_SERVICE_URL
          value: http://product-service.product-service.svc.cluster.local:8082
        - name: FRONTEND_URL
          value: https://oauth.buildingbite.com
        - name: JWT_SECRET
          valueFrom:
            secretKeyRef:
              key: jwt-secret
              name: gateway-secrets
        - name: KEYCLOAK_AUTH_SERVER_URL
          value: http://keycloak:8080
        - name: KEYCLOAK_REALM
          value: sangsang-plus
        - name: KEYCLOAK_CLIENT_ID
          value: gateway-client
        - name: KEYCLOAK_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: keycloak-client-secret
              name: gateway-secrets
        - name: GOOGLE_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: google-client-id
              name: gateway-secrets
              optional: true
        - name: GOOGLE_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: google-client-secret
              name: gateway-secrets
              optional: true
        - name: JWT_PUBLIC_KEY_PATH
          value: /app/secrets/public.pem
        image: buildingbite/sangsangplus-gateway:dev
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: gateway
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: jwt-public-key
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: jwt-public-key
        secret:
          secretName: jwt-public-key
          items:
          - key: public.pem
            path: public.pem
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-07-31T00:33:21Z"
    lastUpdateTime: "2025-07-31T00:33:21Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-07-30T05:34:01Z"
    lastUpdateTime: "2025-07-31T01:11:45Z"
    message: ReplicaSet "sangsang-plus-gateway-57587fcd9c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 92
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
