gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: oauth.buildingbite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sangsang-plus-gateway
            port:
              number: 8080
